# baremetalarduino

./: CMakeLists.txt  main.c
blink/: main.c
button_poll/: main.c
serial_blink/: main.c
serialprint/: main.c
temp_sensor_serial/: CMakeLists.txt  main.c
